Fix for bug 355068 (XSLTProcessor.transformToFragment seems to use only output method "text"). r/sr=sicking, a=beltzner.